@@ -160,7 +160,7 @@ public class TvShowToXbmcNfoConnector {
 
     // set data
     String tvdbid = tvShow.getIdAsString(Constants.TVDBID);
-    if (tvdbid.isEmpty()) {
+    if (StringUtils.isNotBlank(tvdbid)) {
       xbmc.setId(tvdbid);
       xbmc.episodeguide.url.cache = tvdbid + ".xml";
       xbmc.episodeguide.url.url = "http://www.thetvdb.com/api/1D62F2F90030C444/series/" + tvdbid + "/all/"
