@@ -48,8 +48,8 @@ public class DonateAction extends AbstractAction {
   @Override
   public void actionPerformed(ActionEvent e) {
     String url = StringEscapeUtils
-    // .unescapeHtml4("https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=manuel%2elaggner%40gmail%2ecom&amp;lc=GB&amp;item_name=tinyMediaManager&amp;currency_code=EUR&amp;bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted");
-        .unescapeHtml4("https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=myron%40tinymediamanager%2eorg&amp;lc=GB&amp;item_name=tinyMediaManager&amp;currency_code=EUR&amp;bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted");
+        .unescapeHtml4("https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=manuel%2elaggner%40gmail%2ecom&amp;lc=GB&amp;item_name=tinyMediaManager&amp;currency_code=EUR&amp;bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted");
+    // .unescapeHtml4("https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=myron%40tinymediamanager%2eorg&amp;lc=GB&amp;item_name=tinyMediaManager&amp;currency_code=EUR&amp;bn=PP%2dDonationsBF%3abtn_donate_LG%2egif%3aNonHosted");
     try {
       TmmUIHelper.browseUrl(url);
     }
